// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CollectionHero - Snapshots > matches the snapshot for the non-owner Follow state 1`] = `
<div
  class="flex flex-col text-card-foreground shadow-sm relative isolate gap-0 overflow-hidden rounded-md py-0 border-transparent bg-card/40"
  data-cy="collection-hero"
  data-slot="card"
  data-testid="card"
>
  <div
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 -z-10 bg-cover bg-center bg-no-repeat"
    data-testid="container"
    style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0.92) 0%, rgba(0, 0, 0, 0.6) 45%, rgba(0, 0, 0, 0.2) 100%), url(\\"https://example.com/cover.png\\");"
  />
  <div
    class="flex flex-col justify-center gap-4 p-8 lg:p-12"
    data-slot="card-content"
  >
    <h1
      class="text-5xl leading-tight font-bold wrap-anywhere text-foreground lg:text-6xl"
      data-testid="typography"
    >
      Based Bitcoin
    </h1>
    <div
      class="flex w-full items-center gap-3"
      data-testid="container"
    >
      <div
        class="flex items-center min-w-0 flex-1 gap-3 lg:flex-none"
        data-testid="container"
      >
        <a
          class="shrink-0"
          href="/profile/o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
        >
          <div
            data-alt="Bitcoin Wizard"
            data-avatar-url="https://example.com/avatar.png"
            data-fallback-seed="o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
            data-name="Bitcoin Wizard"
            data-size="sm"
            data-testid="avatar-with-fallback"
          >
            Bitcoin Wizard
          </div>
        </a>
        <a
          class="block max-w-full min-w-0"
          href="/profile/o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
        >
          <span
            class="min-w-0 truncate text-xl leading-7 font-bold text-foreground"
            data-testid="typography"
          >
            Bitcoin Wizard
          </span>
        </a>
      </div>
      <div
        aria-label="2 posts"
        class="flex h-6 shrink-0 items-center justify-center gap-1 rounded-full px-2 py-1 text-muted-foreground bg-background"
        data-cy="collection-count-badge"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note size-3 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
        <span
          class="text-xs leading-4 font-medium tracking-widest uppercase"
          data-testid="typography"
        >
          2
          <span
            class="hidden sm:inline"
            data-testid="typography"
          >
             posts
          </span>
        </span>
      </div>
    </div>
    <p
      class="max-w-3xl text-xl leading-8 font-light wrap-anywhere text-secondary-foreground lg:text-2xl"
      data-testid="typography"
    >
      A bit of Bitcoin purity amidst all of the madness.
    </p>
    <div
      class="flex w-full flex-wrap justify-between gap-3 sm:flex-nowrap items-center"
      data-cy="post-tags-expandable-row"
      data-testid="container"
    >
      <div
        class="min-w-0 flex-1"
        data-testid="container"
      >
        <div
          data-show-add-button="true"
          data-tagged-id="o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy:0034BBBDFK83G"
          data-tagged-kind="post"
          data-testid="clickable-tags-list"
        />
      </div>
    </div>
    <div
      class="flex flex-wrap items-center gap-2"
      data-testid="container"
    >
      <button
        aria-label="collections.single.follow"
        class="inline-flex items-center justify-center whitespace-nowrap transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent h-8 px-3 has-[>svg]:px-3.5 gap-2 text-xs"
        data-cy="collection-hero-follow-btn"
        data-size="sm"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        collections.single.follow
      </button>
      <button
        aria-label="collections.single.share"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-9 lg:h-8 lg:w-auto lg:gap-1.5 lg:px-3.5 lg:text-xs"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
        <span
          class="hidden lg:inline"
          data-testid="typography"
        >
          collections.single.share
        </span>
      </button>
      <button
        aria-expanded="false"
        aria-label="post.actions.tagPost"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 border-none shadow-xs"
        data-cy="post-tag-btn"
        data-size="sm"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-tag"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
          />
          <circle
            cx="7.5"
            cy="7.5"
            fill="currentColor"
            r=".5"
          />
        </svg>
        <span
          class="text-xs leading-4 font-bold text-muted-foreground"
          data-testid="typography"
        >
          3
        </span>
      </button>
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="collections.single.layout: collections.single.layoutGrid"
        class="items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-9 hidden lg:inline-flex lg:h-8 lg:w-auto lg:gap-1.5 lg:px-3.5 lg:text-xs"
        data-cy="collection-layout-menu"
        data-size="icon"
        data-slot="button"
        data-state="closed"
        data-variant="secondary"
        id="radix-normalized"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-grip size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="5"
            r="1"
          />
          <circle
            cx="19"
            cy="5"
            r="1"
          />
          <circle
            cx="5"
            cy="5"
            r="1"
          />
          <circle
            cx="12"
            cy="12"
            r="1"
          />
          <circle
            cx="19"
            cy="12"
            r="1"
          />
          <circle
            cx="5"
            cy="12"
            r="1"
          />
          <circle
            cx="12"
            cy="19"
            r="1"
          />
          <circle
            cx="19"
            cy="19"
            r="1"
          />
          <circle
            cx="5"
            cy="19"
            r="1"
          />
        </svg>
        <span
          class="hidden lg:inline"
          data-testid="typography"
        >
          collections.single.layoutGrid
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down hidden size-3.5 lg:block"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    data-testid="repost-dialogs"
  />
</div>
`;

exports[`CollectionHero - Snapshots > matches the snapshot for the owner reorder-active state 1`] = `
<div
  class="flex flex-col text-card-foreground shadow-sm relative isolate gap-0 overflow-hidden rounded-md py-0 border-transparent bg-card/40"
  data-cy="collection-hero"
  data-slot="card"
  data-testid="card"
>
  <div
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 -z-10 bg-cover bg-center bg-no-repeat"
    data-testid="container"
    style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0.92) 0%, rgba(0, 0, 0, 0.6) 45%, rgba(0, 0, 0, 0.2) 100%), url(\\"https://example.com/cover.png\\");"
  />
  <div
    class="flex flex-col justify-center gap-4 p-8 lg:p-12"
    data-slot="card-content"
  >
    <h1
      class="text-5xl leading-tight font-bold wrap-anywhere text-foreground lg:text-6xl"
      data-testid="typography"
    >
      Based Bitcoin
    </h1>
    <div
      class="flex w-full items-center gap-3"
      data-testid="container"
    >
      <div
        class="flex items-center min-w-0 flex-1 gap-3 lg:flex-none"
        data-testid="container"
      >
        <a
          class="shrink-0"
          href="/profile"
        >
          <div
            data-alt="Bitcoin Wizard"
            data-avatar-url="https://example.com/avatar.png"
            data-fallback-seed="o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
            data-name="Bitcoin Wizard"
            data-size="sm"
            data-testid="avatar-with-fallback"
          >
            Bitcoin Wizard
          </div>
        </a>
        <a
          class="block max-w-full min-w-0"
          href="/profile"
        >
          <span
            class="min-w-0 truncate text-xl leading-7 font-bold text-foreground"
            data-testid="typography"
          >
            Bitcoin Wizard
          </span>
        </a>
      </div>
      <div
        aria-label="2 posts"
        class="flex h-6 shrink-0 items-center justify-center gap-1 rounded-full px-2 py-1 text-muted-foreground bg-background"
        data-cy="collection-count-badge"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note size-3 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
        <span
          class="text-xs leading-4 font-medium tracking-widest uppercase"
          data-testid="typography"
        >
          2
          <span
            class="hidden sm:inline"
            data-testid="typography"
          >
             posts
          </span>
        </span>
      </div>
    </div>
    <p
      class="max-w-3xl text-xl leading-8 font-light wrap-anywhere text-secondary-foreground lg:text-2xl"
      data-testid="typography"
    >
      A bit of Bitcoin purity amidst all of the madness.
    </p>
    <div
      class="flex w-full flex-wrap justify-between gap-3 sm:flex-nowrap items-center"
      data-cy="post-tags-expandable-row"
      data-testid="container"
    >
      <div
        class="min-w-0 flex-1"
        data-testid="container"
      >
        <div
          data-show-add-button="true"
          data-tagged-id="o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy:0034BBBDFK83G"
          data-tagged-kind="post"
          data-testid="clickable-tags-list"
        />
      </div>
    </div>
    <div
      class="flex flex-wrap items-center gap-2"
      data-testid="container"
    >
      <button
        aria-label="collections.single.content"
        data-testid="collection-add-content"
        disabled=""
        type="button"
      >
        collections.single.content
      </button>
      <button
        aria-label="collections.single.share"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-9 lg:h-8 lg:w-auto lg:gap-1.5 lg:px-3.5 lg:text-xs"
        data-cy="collection-hero-share-btn"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
        <span
          class="hidden lg:inline"
          data-testid="typography"
        >
          collections.single.share
        </span>
      </button>
      <button
        aria-label="collections.single.saveOrder"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-brand/16 text-brand hover:!bg-brand/30 border-brand size-9 lg:h-8 lg:w-auto lg:gap-1.5 lg:px-3.5 lg:text-xs"
        data-cy="collection-hero-save-order-btn"
        data-size="icon"
        data-slot="button"
        data-variant="default"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-check size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 6 9 17l-5-5"
          />
        </svg>
        <span
          class="hidden lg:inline"
          data-testid="typography"
        >
          collections.single.saveOrder
        </span>
      </button>
      <button
        aria-label="collections.single.cancelReorder"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-destructive/16 text-destructive hover:!bg-destructive/30 border-destructive size-9 lg:h-8 lg:w-auto lg:gap-1.5 lg:px-3.5 lg:text-xs"
        data-cy="collection-hero-cancel-reorder-btn"
        data-size="icon"
        data-slot="button"
        data-variant="destructive-soft"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-x size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
        <span
          class="hidden lg:inline"
          data-testid="typography"
        >
          collections.single.cancelReorder
        </span>
      </button>
      <button
        aria-label="collections.single.edit"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-9 lg:h-8 lg:w-auto lg:gap-1.5 lg:px-3.5 lg:text-xs"
        data-cy="collection-hero-edit-btn"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pencil size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
        <span
          class="hidden lg:inline"
          data-testid="typography"
        >
          collections.single.edit
        </span>
      </button>
      <button
        aria-label="collections.single.delete"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-9 lg:h-8 lg:w-auto lg:gap-1.5 lg:px-3.5 lg:text-xs"
        data-cy="collection-hero-delete-btn"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
        <span
          class="hidden lg:inline"
          data-testid="typography"
        >
          collections.single.delete
        </span>
      </button>
      <button
        aria-expanded="false"
        aria-label="post.actions.tagPost"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 border-none shadow-xs"
        data-cy="post-tag-btn"
        data-size="sm"
        data-slot="button"
        data-variant="secondary"
        disabled=""
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-tag"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
          />
          <circle
            cx="7.5"
            cy="7.5"
            fill="currentColor"
            r=".5"
          />
        </svg>
        <span
          class="text-xs leading-4 font-bold text-muted-foreground"
          data-testid="typography"
        >
          3
        </span>
      </button>
    </div>
  </div>
  <div
    data-testid="repost-dialogs"
  />
</div>
`;

exports[`CollectionHero - Snapshots > matches the snapshot for the owner state 1`] = `
<div
  class="flex flex-col text-card-foreground shadow-sm relative isolate gap-0 overflow-hidden rounded-md py-0 border-transparent bg-card/40"
  data-cy="collection-hero"
  data-slot="card"
  data-testid="card"
>
  <div
    aria-hidden="true"
    class="pointer-events-none absolute inset-0 -z-10 bg-cover bg-center bg-no-repeat"
    data-testid="container"
    style="background-image: linear-gradient(to right, rgba(0, 0, 0, 0.92) 0%, rgba(0, 0, 0, 0.6) 45%, rgba(0, 0, 0, 0.2) 100%), url(\\"https://example.com/cover.png\\");"
  />
  <div
    class="flex flex-col justify-center gap-4 p-8 lg:p-12"
    data-slot="card-content"
  >
    <h1
      class="text-5xl leading-tight font-bold wrap-anywhere text-foreground lg:text-6xl"
      data-testid="typography"
    >
      Based Bitcoin
    </h1>
    <div
      class="flex w-full items-center gap-3"
      data-testid="container"
    >
      <div
        class="flex items-center min-w-0 flex-1 gap-3 lg:flex-none"
        data-testid="container"
      >
        <a
          class="shrink-0"
          href="/profile"
        >
          <div
            data-alt="Bitcoin Wizard"
            data-avatar-url="https://example.com/avatar.png"
            data-fallback-seed="o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
            data-name="Bitcoin Wizard"
            data-size="sm"
            data-testid="avatar-with-fallback"
          >
            Bitcoin Wizard
          </div>
        </a>
        <a
          class="block max-w-full min-w-0"
          href="/profile"
        >
          <span
            class="min-w-0 truncate text-xl leading-7 font-bold text-foreground"
            data-testid="typography"
          >
            Bitcoin Wizard
          </span>
        </a>
      </div>
      <div
        aria-label="2 posts"
        class="flex h-6 shrink-0 items-center justify-center gap-1 rounded-full px-2 py-1 text-muted-foreground bg-background"
        data-cy="collection-count-badge"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note size-3 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
        <span
          class="text-xs leading-4 font-medium tracking-widest uppercase"
          data-testid="typography"
        >
          2
          <span
            class="hidden sm:inline"
            data-testid="typography"
          >
             posts
          </span>
        </span>
      </div>
    </div>
    <p
      class="max-w-3xl text-xl leading-8 font-light wrap-anywhere text-secondary-foreground lg:text-2xl"
      data-testid="typography"
    >
      A bit of Bitcoin purity amidst all of the madness.
    </p>
    <div
      class="flex w-full flex-wrap justify-between gap-3 sm:flex-nowrap items-center"
      data-cy="post-tags-expandable-row"
      data-testid="container"
    >
      <div
        class="min-w-0 flex-1"
        data-testid="container"
      >
        <div
          data-show-add-button="true"
          data-tagged-id="o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy:0034BBBDFK83G"
          data-tagged-kind="post"
          data-testid="clickable-tags-list"
        />
      </div>
    </div>
    <div
      class="flex flex-wrap items-center gap-2"
      data-testid="container"
    >
      <button
        aria-label="collections.single.content"
        data-testid="collection-add-content"
        type="button"
      >
        collections.single.content
      </button>
      <button
        aria-label="collections.single.share"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-9 lg:h-8 lg:w-auto lg:gap-1.5 lg:px-3.5 lg:text-xs"
        data-cy="collection-hero-share-btn"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
        <span
          class="hidden lg:inline"
          data-testid="typography"
        >
          collections.single.share
        </span>
      </button>
      <button
        aria-label="collections.single.edit"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-9 lg:h-8 lg:w-auto lg:gap-1.5 lg:px-3.5 lg:text-xs"
        data-cy="collection-hero-edit-btn"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-pencil size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21.174 6.812a1 1 0 0 0-3.986-3.987L3.842 16.174a2 2 0 0 0-.5.83l-1.321 4.352a.5.5 0 0 0 .623.622l4.353-1.32a2 2 0 0 0 .83-.497z"
          />
          <path
            d="m15 5 4 4"
          />
        </svg>
        <span
          class="hidden lg:inline"
          data-testid="typography"
        >
          collections.single.edit
        </span>
      </button>
      <button
        aria-label="collections.single.delete"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-9 lg:h-8 lg:w-auto lg:gap-1.5 lg:px-3.5 lg:text-xs"
        data-cy="collection-hero-delete-btn"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-trash2 lucide-trash-2 size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10 11v6"
          />
          <path
            d="M14 11v6"
          />
          <path
            d="M19 6v14a2 2 0 0 1-2 2H7a2 2 0 0 1-2-2V6"
          />
          <path
            d="M3 6h18"
          />
          <path
            d="M8 6V4a2 2 0 0 1 2-2h4a2 2 0 0 1 2 2v2"
          />
        </svg>
        <span
          class="hidden lg:inline"
          data-testid="typography"
        >
          collections.single.delete
        </span>
      </button>
      <button
        aria-expanded="false"
        aria-label="post.actions.tagPost"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 border-none shadow-xs"
        data-cy="post-tag-btn"
        data-size="sm"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-tag"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
          />
          <circle
            cx="7.5"
            cy="7.5"
            fill="currentColor"
            r=".5"
          />
        </svg>
        <span
          class="text-xs leading-4 font-bold text-muted-foreground"
          data-testid="typography"
        >
          3
        </span>
      </button>
    </div>
  </div>
  <div
    data-testid="repost-dialogs"
  />
</div>
`;

exports[`CollectionHero - Snapshots > matches the snapshot when no cover image and no description are set 1`] = `
<div
  class="flex flex-col bg-card text-card-foreground shadow-sm relative isolate gap-0 overflow-hidden rounded-md py-0"
  data-cy="collection-hero"
  data-slot="card"
  data-testid="card"
>
  <div
    class="flex flex-col justify-center gap-4 p-8 lg:p-12"
    data-slot="card-content"
  >
    <h1
      class="text-5xl leading-tight font-bold wrap-anywhere text-foreground lg:text-6xl"
      data-testid="typography"
    >
      Quiet collection
    </h1>
    <div
      class="flex w-full items-center gap-3"
      data-testid="container"
    >
      <div
        class="flex items-center min-w-0 flex-1 gap-3 lg:flex-none"
        data-testid="container"
      >
        <a
          class="shrink-0"
          href="/profile/o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
        >
          <div
            data-alt="Bitcoin Wizard"
            data-avatar-url="https://example.com/avatar.png"
            data-fallback-seed="o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
            data-name="Bitcoin Wizard"
            data-size="sm"
            data-testid="avatar-with-fallback"
          >
            Bitcoin Wizard
          </div>
        </a>
        <a
          class="block max-w-full min-w-0"
          href="/profile/o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy"
        >
          <span
            class="min-w-0 truncate text-xl leading-7 font-bold text-foreground"
            data-testid="typography"
          >
            Bitcoin Wizard
          </span>
        </a>
      </div>
      <div
        aria-label="0 posts"
        class="flex h-6 shrink-0 items-center justify-center gap-1 rounded-full px-2 py-1 text-muted-foreground bg-background"
        data-cy="collection-count-badge"
        data-testid="container"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note size-3 shrink-0"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
        <span
          class="text-xs leading-4 font-medium tracking-widest uppercase"
          data-testid="typography"
        >
          0
          <span
            class="hidden sm:inline"
            data-testid="typography"
          >
             posts
          </span>
        </span>
      </div>
    </div>
    <div
      class="flex w-full flex-wrap justify-between gap-3 sm:flex-nowrap items-center"
      data-cy="post-tags-expandable-row"
      data-testid="container"
    >
      <div
        class="min-w-0 flex-1"
        data-testid="container"
      >
        <div
          data-show-add-button="true"
          data-tagged-id="o1gg96ewuojmopcjbz8895478wdtxtzzber7aezq6ror5a91j7dy:0034BBBDFK83G"
          data-tagged-kind="post"
          data-testid="clickable-tags-list"
        />
      </div>
    </div>
    <div
      class="flex flex-wrap items-center gap-2"
      data-testid="container"
    >
      <button
        aria-label="collections.single.follow"
        class="inline-flex items-center justify-center whitespace-nowrap transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent h-8 px-3 has-[>svg]:px-3.5 gap-2 text-xs"
        data-cy="collection-hero-follow-btn"
        data-size="sm"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-plus size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M5 12h14"
          />
          <path
            d="M12 5v14"
          />
        </svg>
        collections.single.follow
      </button>
      <button
        aria-label="collections.single.share"
        class="inline-flex items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-9 lg:h-8 lg:w-auto lg:gap-1.5 lg:px-3.5 lg:text-xs"
        data-size="icon"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-sticky-note size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M21 9a2.4 2.4 0 0 0-.706-1.706l-3.588-3.588A2.4 2.4 0 0 0 15 3H5a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h14a2 2 0 0 0 2-2z"
          />
          <path
            d="M15 3v5a1 1 0 0 0 1 1h5"
          />
        </svg>
        <span
          class="hidden lg:inline"
          data-testid="typography"
        >
          collections.single.share
        </span>
      </button>
      <button
        aria-expanded="false"
        aria-label="post.actions.tagPost"
        class="inline-flex items-center justify-center whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border bg-secondary text-secondary-foreground hover:bg-accent h-8 gap-1.5 px-3 has-[>svg]:px-3.5 border-none shadow-xs"
        data-cy="post-tag-btn"
        data-size="sm"
        data-slot="button"
        data-variant="secondary"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-tag"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12.586 2.586A2 2 0 0 0 11.172 2H4a2 2 0 0 0-2 2v7.172a2 2 0 0 0 .586 1.414l8.704 8.704a2.426 2.426 0 0 0 3.42 0l6.58-6.58a2.426 2.426 0 0 0 0-3.42z"
          />
          <circle
            cx="7.5"
            cy="7.5"
            fill="currentColor"
            r=".5"
          />
        </svg>
        <span
          class="text-xs leading-4 font-bold text-muted-foreground"
          data-testid="typography"
        >
          3
        </span>
      </button>
      <button
        aria-expanded="false"
        aria-haspopup="menu"
        aria-label="collections.single.layout: collections.single.layoutGrid"
        class="items-center justify-center gap-2 whitespace-nowrap text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*=\\"size-\\"])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/40 aria-invalid:border-destructive font-semibold cursor-pointer rounded-full border shadow-xs bg-secondary text-secondary-foreground hover:bg-accent size-9 hidden lg:inline-flex lg:h-8 lg:w-auto lg:gap-1.5 lg:px-3.5 lg:text-xs"
        data-cy="collection-layout-menu"
        data-size="icon"
        data-slot="button"
        data-state="closed"
        data-variant="secondary"
        id="radix-normalized"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="lucide lucide-grip size-4"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <circle
            cx="12"
            cy="5"
            r="1"
          />
          <circle
            cx="19"
            cy="5"
            r="1"
          />
          <circle
            cx="5"
            cy="5"
            r="1"
          />
          <circle
            cx="12"
            cy="12"
            r="1"
          />
          <circle
            cx="19"
            cy="12"
            r="1"
          />
          <circle
            cx="5"
            cy="12"
            r="1"
          />
          <circle
            cx="12"
            cy="19"
            r="1"
          />
          <circle
            cx="19"
            cy="19"
            r="1"
          />
          <circle
            cx="5"
            cy="19"
            r="1"
          />
        </svg>
        <span
          class="hidden lg:inline"
          data-testid="typography"
        >
          collections.single.layoutGrid
        </span>
        <svg
          aria-hidden="true"
          class="lucide lucide-chevron-down hidden size-3.5 lg:block"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="m6 9 6 6 6-6"
          />
        </svg>
      </button>
    </div>
  </div>
  <div
    data-testid="repost-dialogs"
  />
</div>
`;
